quote few pages ;)

--- a/quotes-from-abraham-lincoln.html
+++ b/quotes-from-abraham-lincoln.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="test post desc">
-    <title>bettering: test post</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/blog/">
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="description" content="quotes from abraham lincoln">
+    <title>quotes from abraham lincoln</title>
+    <link href="https://getbootstrap.com/docs/5.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         a {
             text-decoration: none;
@@ -63,7 +62,7 @@
         }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
-    <link href="blog.css" rel="stylesheet">
+    <link href="./assets/dist/css/blog.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -74,44 +73,18 @@
                 </div>
             </div>
         </header>
-        <div class="nav-scroller py-1 mb-2">
-            <nav class="nav d-flex justify-content-between">
-                <a class="p-2 link-secondary" href="#">World</a>
-                <a class="p-2 link-secondary" href="#">India</a>
-                <a class="p-2 link-secondary" href="#">Europe</a>
-                <a class="p-2 link-secondary" href="#">U.S.</a>
-                <a class="p-2 link-secondary" href="#">Technology</a>
-                <!-- <a class="p-2 link-secondary" href="#">Design</a> -->
-                <!-- <a class="p-2 link-secondary" href="#">Culture</a> -->
-                <a class="p-2 link-secondary" href="#">Business</a>
-                <a class="p-2 link-secondary" href="#">Politics</a>
-                <!-- <a class="p-2 link-secondary" href="#">Opinion</a> -->
-                <a class="p-2 link-secondary" href="#">Science</a>
-                <a class="p-2 link-secondary" href="#">Health</a>
-                <a class="p-2 link-secondary" href="#">Style</a>
-                <a class="p-2 link-secondary" href="#">Travel</a>
-            </nav>
-        </div>
     </div>
     <main class="container">
         <div class="row g-5">
             <div class="col-md-8">
                 <article class="blog-post">
-                    <h1 class="blog-post-title mb-1">Sample blog post</h1>
-                    <p class="blog-post-meta">December 28, 2022</p>
-                    <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap.
-                        Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-                    <hr>
-                    <p>This is some additional paragraph placeholder content. It has been written to fill the available
-                        space and show how a longer snippet of text affects the surrounding content. We'll repeat it
-                        often to keep the demonstration flowing, so be on the lookout for this exact same string of
-                        text.</p>
-                    <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the
-                        other highly repetitive body text used throughout.</p>
+                    <h1 class="blog-post-title mb-1">quotes from abraham lincoln</h1>
+                    <p class="blog-post-meta">December 29, 2022</p>
+                    <p><br><br>"The best way to predict your future is to create it." - Abraham Lincoln<br><br>"America will never be destroyed from the outside. If we falter and lose our freedoms, it will be because we destroyed ourselves." - Abraham Lincoln<br><br>"I walk slowly, but I never walk backward." - Abraham Lincoln<br><br>"I have always found that mercy bears richer fruits than strict justice." - Abraham Lincoln<br><br>"In the end, it's not the years in your life that count. It's the life in your years." - Abraham Lincoln<br><br>"Nearly all men can stand adversity, but if you want to test a man's character, give him power." - Abraham Lincoln<br><br>"Those who deny freedom to others deserve it not for themselves." - Abraham Lincoln<br><br>"My great concern is not whether you have failed, but whether you are content with your failure." - Abraham Lincoln<br><br>"The best way to get a bad law repealed is to enforce it strictly." - Abraham Lincoln<br><br>"The probability that we may fail in the struggle ought not to deter us from the support of a cause we believe to be just." - Abraham Lincoln</p>
                 </article>
                 <nav class="blog-pagination" aria-label="Pagination">
-                    <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
-                    <a class="btn btn-outline-secondary rounded-pill disabled">Newer</a>
+                    <a class="btn btn-outline-secondary rounded-pill" href="good-morning-quotes-to-her.html">Previous</a>
+                    <a class="btn btn-outline-primary rounded-pill" href="happy-quotes-about-friday.html">Next</a>
                 </nav>
             </div>
             <div class="col-md-4">
@@ -124,17 +97,17 @@
                     <div class="p-4">
                         <h4 class="fst-italic">learn more</h4>
                         <ol class="list-unstyled mb-0">
-                            <li><a href="#">Recommded Article 1</a></li>
-                            <li><a href="#">Recommded Article 1</a></li>
-                            <li><a href="#">Recommded Article 1</a></li>
+                            <li><a href="good-morning-quotes-to-her.html">good morning quotes to her</a></li>
+                            <li><a href="happy-quotes-about-friday.html">happy quotes about friday</a></li>
+                            <li><a href="quotes-from-abraham-lincoln.html">quotes from abraham lincoln</a></li>
                         </ol>
                     </div>
-                    <div class="p-4">
+                    <!-- <div class="p-4">
                         <h4 class="fst-italic">Elsewhere</h4>
                         <ol class="list-unstyled">
-                            <li><a href="#">GitHub</a></li>
+                            <li><a target="_blank" href="https://github.com/betteringg/betteringg.github.io">Instagram</a></li>
                         </ol>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -144,5 +117,6 @@
             <a href="#">Back to top</a>
         </p>
     </footer>
+    <script src="./assets/dist/js/article.js"></script>
 </body>
 </html>
