--- a/100s-quotes-categories.html
+++ b/100s-quotes-categories.html
@@ -140,7 +140,7 @@
                         <li><a href="funny-quotes-wednesday.html">funny quotes wednesday</a></li>
                         <li><a href="quotes-with-vision.html">quotes with vision</a></li>
                         <li><a href="nikola-tesla-quotes.html">nikola tesla quotes</a></li>
-                        <li><a href="eric-tho.as-quotes.html">eric tho.as quotes</a></li>
+                        <li><a href="eric-thomas-quotes.html">Eric Thomas quotes</a></li>
                         <li><a href="teach-a-man-to-fish-quotes.html">teach a man to fish quotes</a></li>
                         <li><a href="quotes-with-fire.html">quotes with fire</a></li>
                         <li><a href="quotes-of-insecurity.html">quotes of insecurity</a></li>
@@ -203,7 +203,7 @@
                         <li><a href="waste-of-time-quotes.html">waste of time quotes</a></li>
                         <li><a href="quotes-that-are-relatable.html">quotes that are relatable</a></li>
                         <li><a href="quotes-from-sadhguru.html">quotes from sadhguru</a></li>
-                        <li><a href="quotes-of-9/11.html">quotes of 9/11</a></li>
+                        <li><a href="quotes-of-9-11.html">quotes of 9/11</a></li>
                         <li><a href="quotes-elf-movie.html">quotes elf movie</a></li>
                         <li><a href="good-night-quotes-her.html">good night quotes her</a></li>
                         <li><a href="movie-friday-quotes.html">movie friday quotes</a></li>
